--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: Byron's Blog
+description: 记录自己学到的知识，然后温故而知新！
 ---
 
 {% include header.html %}
