--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 home-title: Byron's Blog
 description: 记录自己学到的知识，然后温故而知新！
+header-img: assets/img/打字机.jpg
 ---
 
 {% include header.html %}
